--- a/neg/index.html
+++ b/neg/index.html
@@ -35,7 +35,7 @@ var force = d3.layout.force()
   .linkDistance(60)
   .charge(-700)
   .size([w,h]);
-var default_node_color = "#00abff";
+var default_node_color = "#ff0000";
 //var default_node_color = "rgb(3,190,100)";
 var default_link_color = "#888";
 var nominal_base_node_size = 8;
